# YAPT

./: .gitignore  CMakeLists.txt  README.md
scene/: scene.toml
src/: aabb.h  build.bat  camera.cpp  camera.h  colour.h  drand.cpp  drand.h  engine.cpp  engine.h  float3.h  hitlist.cpp  hitlist.h  kd_tree.cpp  kd_tree.h  light.h  main.cpp  material.cpp  material.h  mesh.h  obj_parser.cpp  obj_parser.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  screen.cpp  screen.h  sphere.cpp  sphere.h  surface.cpp  surface.h  triangle.h  v3.h  window.cpp  window.h  yapt.cpp
src/app/screen/: screen.cpp  screen.h
src/app/window/: window.cpp  window.h
src/pt/: main.cpp
src/pt/objects/: objects.h  sphere.cpp  sphere.h  triangle.h
src/pt/ray/: ray.cpp  ray.h
src/pt/surface/: surface.h
src/utility/: float3.h
