cmake_minimum_required(VERSION 3.6)
project(YAPT)

if(OPENMP_FOUND)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
set(CMAKE_CXX_FLAGS "-openmp")
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})
set(SFML_ROOT "C:/Users/Oliver/Documents/Programming/CPP/YAPT/lib/sfml/")
set(GLEW_LINK "${CMAKE_CURRENT_LIST_DIR}/lib/glew/lib/Release/Win32")
include_directories("imgui")
include_directories("imgui-sfml")
include_directories("${PROJECT_BINARY_DIR}")
link_directories("${PROJECT_BINARY_DIR}")
link_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib/sfml")
set(CMAKE_MODULE_PATH"${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
INCLUDE(FindOpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/glew/include/GL)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/glew/libs)
file(GLOB pt_src "src/*.cpp" "src/*.h" "imgui/*.h" "imgui/*.cpp" "imgui-sfml/*.h" "imgui-sfml/*.cpp")

add_executable(YAPT ${pt_src})
target_link_libraries(YAPT ${OPENGL_LIBRARIES} ${GLEW_LINK}/glew32.lib  ${GLEW_LIBRARIES})

find_package(SFML REQUIRED system graphics window system)
if(SFML_FOUND)
  include_directories(${SFML_INCLUDE_DIR})
  target_link_libraries(YAPT ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
endif()
